    (Bartosz Dziewoński)

- GD:
  . Fixed bug #43475 (Thick styled lines have scrambled patterns). (cmb)
  . Fixed bug #53640 (XBM images require width to be multiple of 8). (cmb)

- OpenSSL:
  . Fixed bug #71915 (openssl_random_pseudo_bytes is not fork-safe).
    (Jakub Zelenka)
  . Fixed bug #72336 (openssl_pkey_new does not fail for invalid DSA params).
    (Jakub Zelenka)

23 Jun 2016, PHP 5.6.23

- GD:
  . Fixed bug #72337 (invalid dimensions can lead to crash) (Pierre)

- Intl:
  . Fixed bug #70484 (selectordinal doesn't work with named parameters).
    (Anatol)

- OpenSSL:
  . Fixed bug #72140 (segfault after calling ERR_free_strings()).
    (Jakub Zelenka)

26 May 2016, PHP 5.6.22

- Core:
  . Fixed bug #72172 (zend_hex_strtod should not use strlen).
    (bwitz at hotmail dot com )
  . Fixed bug #72114 (Integer underflow / arbitrary null write in
    fread/gzread). (Stas)
  . Fixed bug #72135 (Integer Overflow in php_html_entities). (Stas)

- GD:
  . Fixed bug #72227 (imagescale out-of-bounds read). (Stas)

- Intl
  . Fixed bug #64524 (Add intl.use_exceptions to php.ini-*). (Anatol)
  . Fixed bug #72241 (get_icu_value_internal out-of-bounds read). (Stas)

- Postgres:
  . Fixed bug #72151 (mysqli_fetch_object changed behaviour). (Anatol) 

28 Apr 2016, PHP 5.6.21

- Core:
  . Fixed bug #69537 (__debugInfo with empty string for key gives error).
    (krakjoe)
  . Fixed bug #71841 (EG(error_zval) is not handled well). (Laruence)

- BCmath:
  . Fixed bug #72093 (bcpowmod accepts negative scale and corrupts
    _one_ definition). (Stas)

- Curl:
  . Fixed bug #71831 (CURLOPT_NOPROXY applied as long instead of string).
    (Michael Sierks)    

- Date:
  . Fixed bug #63740 (strtotime seems to use both sunday and monday as start of
    week). (Derick)
  . Fixed bug #71889 (DateInterval::format Segmentation fault). (Thomas Punt)

- EXIF:
  . Fixed bug #72094 (Out of bounds heap read access in exif header processing). (Stas)

- GD: